@@ -1,10 +1,10 @@
-#define FILEVER_INCVERSION        0,21,0,295
-#define PRODUCTVER_INCVERSION     0,21,0,295
-#define STRFILEVER_INCVERSION     "0, 21, 0, 295\0"
-#define STRPRODUCTVER_INCVERSION  "0, 21, 0, 295\0"
+#define FILEVER_INCVERSION        0,21,0,303
+#define PRODUCTVER_INCVERSION     0,21,0,303
+#define STRFILEVER_INCVERSION     "0, 21, 0, 303\0"
+#define STRPRODUCTVER_INCVERSION  "0, 21, 0, 303\0"
 
 #define TSVN_VERMAJOR             0
 #define TSVN_VERMINOR             21
 #define TSVN_VERMICRO             0
-#define TSVN_VERBUILD_INCVERSION  295
+#define TSVN_VERBUILD_INCVERSION  303
 
